--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -5,21 +5,17 @@ on:
     # Runs at 12am IST
     - cron: '30 18 * * *'
   workflow_dispatch:
+  
 jobs:
   update-readme:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: GwenKaplan/waka-readme-stats@master
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LANGUAGE: True
-          SHOW_EDITORS: True
-          SHOW_OS: True
-          SHOW_LINES_OF_CODE: False
-          SHOW_TOTAL_CODE_TIME: False
-          SHOW_PROFILE_VIEWS: False
-          SHOW_PROJECTS: False
-          SHOW_LANGUAGE_PER_REPO: False
-          SHOW_SHORT_INFO: False
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_TIMEZONE: "False"
+          SHOW_PROJECTS: "False"
