--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -1,10 +1,11 @@
 name: Waka Readme
 
 on:
-  schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
   workflow_dispatch:
+  schedule:
+    # Runs at 8AM EDT (12:00 UTC)
+    - cron: '0 12 * * *'
+
 jobs:
   update-readme:
     name: Update Readme with Metrics
@@ -14,3 +15,12 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_DAYS_OF_WEEK: "False"
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_COMMIT: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_SHORT_INFO: "False"
+          SHOW_LOC_CHART: "False" 
+          SHOW_OS: "False"
+          SHOW_PROJECTS: "False"
+          SHOW_TOTAL_CODE_TIME: "False"
